# lsmps-3D

./: .gitignore  CMakeLists.txt  README.md  start_cuda_container.sh  算法参考.md
docs/: implementation_notes.md  ppe_matrix_assembly.md
docs/design/: PPEadjust.md  lsmps算子离散.md  moment_matrix.md  ppeMatrix.md  ppebuilder.md  time_step.md
include/lsmps3d/app/: simulation_driver.cuh
include/lsmps3d/core/: config.hpp  constants.hpp  cuda_check.cuh  time_step.hpp  types.cuh  workspace.cuh
include/lsmps3d/correction/: pressure_correction.cuh
include/lsmps3d/io/: file_manager.hpp  vtk_writer.hpp
include/lsmps3d/lsmps/: basis.cuh  moment_matrix.cuh
include/lsmps3d/moment_matrix/: basis.cuh  moment_matrix.cuh
include/lsmps3d/neighbor/: cell_list.cuh  neighbor_search.cuh
include/lsmps3d/particle/: neighbor_list.cuh  particle_data.cuh
include/lsmps3d/ppe/: amgx_solver.hpp  ppe_matrix.cuh
include/lsmps3d/provision/: explicit_update.cuh
include/lsmps3d/surface/: surface_detection.cuh  surface_type.cuh
src/app/: main.cu  simulation_driver.cu
src/core/: config.cpp  runtime.cu  time_step.cpp
src/correction/: pressure_correction.cu
src/io/: file_manager.cpp  vtk_writer.cpp
src/lsmps/: moment_matrix.cu
src/moment_matrix/: moment_matrix.cu
src/neighbor/: neighbor_search.cu
src/ppe/: ppe_matrix.cu
src/provision/: explicit_update.cu
src/surface/: surface_detection.cu
tests/reference/: complex_surface_diagnostics.cu  hydrostatic_surface_diagnostics.cu  pipe_flow_diagnostics.cu
tests/unit/: smoke_config.cpp  smoke_file_manager.cpp  smoke_lsmps_moment_matrix.cu  smoke_moment_matrix.cu  smoke_neighbor_search.cu  smoke_particle_copy.cu  smoke_ppe_matrix.cu  smoke_pressure_correction.cu  smoke_provision_explicit_update.cu  smoke_surface_detection.cu  smoke_time_step.cpp  smoke_vtk_writer.cpp
tool/: CMakeLists.txt  generate_hydrostatic_box.cpp
